# RegFileStudy

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  chisel.bzl  maven_install.json  plot_results.py  pyrightconfig.json  requirements.in  requirements_lock.txt  results.tcl
multiplier/: BUILD  README.md  hardfloat.BUILD.bazel  plot_reg2reg.py  study.bzl
multiplier/src/main/scala/: FloatingPointUnit.scala  Multiplier.scala  Study.scala
src/main/scala/: RegFile.scala
